refactor(chat): 优化聊天会话服务代码实现
- 使用 Duration 替代 TimeUnit 进行 Redis 锁时间设置
- 将安全尺寸计算从 Math.min/max 组合改为 Math.clamp 方法
- 简化反馈收集器中的合并函数逻辑
- 移除不再使用的 TimeUnit 导入并添加 Duration 导入